backend-main/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: octoprotect-backend
  labels:
    app: octoprotect-backend
spec:
  containers:
    - name: octoprotect-backend
      image: git.uwaterloo.ca:5050/octoprotect/backend:IMAGE_TAG
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          name: backend
      resources:
        limits:
          cpu: 50m
          memory: 128Mi
      volumeMounts:
        - mountPath: /persistent
          name: data
  restartPolicy: Always
  imagePullSecrets:
    - name: uw-pullsecret
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: octoprotect-data
