backend-main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprotect-backend
spec:
  selector:
    app: octoprotect-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: backend
  type: ClusterIP
